--- a/src/options/index.html
+++ b/src/options/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raccourcia</title>
 </head>
-<body class="bg-white-app-500">
+<body class="bg-white-app-500 font-londrina">
 <div id="app"></div>
 <script type="module" src="./main.ts"></script>
 </body>
